Fix layout bug

--- a/src/site/_includes/postcss/section-along.css
+++ b/src/site/_includes/postcss/section-along.css
@@ -60,7 +60,7 @@
 
     @media (max-width: 469px) {
       min-height: 840px;
-      padding-bottom: 240px;
+      padding-bottom: 180px;
     }
   }
 
